--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@clack/prompts": "^0.11.0",
     "commander": "^14.0.2",
     "copy-paste": "^2.2.0",
+    "env-paths": "^3.0.0",
     "nanoid": "^5.1.6",
     "pngjs": "^7.0.0",
     "radash": "^12.1.1",
