--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^5"
   },
   "scripts": {
-    "check": "biome check --fix"
+    "check": "biome check --fix",
+    "build": "bun build ./src/index.ts --compile --outfile ./dist/phosphene"
   }
 }
